#pragma once
class ColorChanged
{
};

