#pragma once
class DiscardStackReady
{
};

