#pragma once
class ReversedDirection
{
};

