#pragma once
class Skiped
{
};

